--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<li><a href="unicodify">unicodify</a></li>
 		<li><a href="ununicodify">ununicodify</a></li>
 		<li><a href="whatismyip">whatismyip</a></li>
+		<li><a href="convertip">convertip</a></li>
 	</ul>
 	<p>Copyright (c) 2017-2018, <a href="https://hellsh.com/" target="_blank">Hellsh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 </body>
