--- a/length.html
+++ b/length.html
@@ -26,7 +26,7 @@
 		<span data-limit="400">- Displayed Facebook Status</span><br>
 		<span data-limit="40">- Most Effective Facebook Status</span><br>
 	</p>
-	<p>Copyright (c) 2017-2018, <a href="https://hellsh.com/" target="_blank">Hellsh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
+	<p>Copyright (c) 2017-2019, <a href="https://hell.sh/" target="_blank">Hell.sh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 	<script src="https://cdn.hell.sh/jquery/3.3.1/slim.js" integrity="sha384-sh6iinGECmk2oNezd0GDVuXqoHrZzF3PTML2nyt/lC61v2p1W7hGll/JkRFCOcMf" crossorigin="anonymous"></script>
 	<script>
 		$("[data-limit]").each(function()
