--- a/txtshortr.html
+++ b/txtshortr.html
@@ -11,7 +11,7 @@
 	<p id="counter-nosel">
 		<span id="counter-chars">0 Chars</span> / <span id="counter-words">0 Words</span> / <span id="counter-lines">1 Line</span>
 	</p>
-	<p>Copyright (c) 2017-2018, <a href="https://hellsh.com/" target="_blank">Hellsh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
+	<p>Copyright (c) 2017-2019, <a href="https://hell.sh/" target="_blank">Hell.sh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 	<script src="https://cdn.hell.sh/jquery/3.3.1/slim.js" integrity="sha384-sh6iinGECmk2oNezd0GDVuXqoHrZzF3PTML2nyt/lC61v2p1W7hGll/JkRFCOcMf" crossorigin="anonymous"></script>
 	<script>
 		var storedText="";
