--- a/ununicodify.html
+++ b/ununicodify.html
@@ -11,7 +11,7 @@
 	<p>Detected alphabets:</p>
 	<ul id="alphabets-list"></ul>
 	<p>Looking for a way to redo this unholy transaction? <a href="/unicodify">unicodify</a></p>
-	<p>Copyright (c) 2017-2018, <a href="https://hellsh.com/" target="_blank">Hellsh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
+	<p>Copyright (c) 2017-2019, <a href="https://hell.sh/" target="_blank">Hell.sh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 	<script src="unicode_alphabets.js"></script>
 	<script>
 		document.getElementById("input").oninput=function()
