--- a/convertip.html
+++ b/convertip.html
@@ -11,7 +11,7 @@
 		Binary:&nbsp; <input id="binary" type="text" value="01111111000000000000000000000001"><br>
 		Decimal: <input id="decimal" type="text" value="2130706433">
 	</p>
-	<p>Copyright (c) 2017-2018, <a href="https://hellsh.com/" target="_blank">Hellsh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
+	<p>Copyright (c) 2017-2019, <a href="https://hell.sh/" target="_blank">Hell.sh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 	<script>
 		document.getElementById("plain").oninput=function(event)
 		{
