--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<li><a href="txtshortr">txtshortr</a></li>
 		<li><a href="unicodify">unicodify</a></li>
 		<li><a href="ununicodify">ununicodify</a></li>
-		<li><a href="whatismyip">whatismyip</a></li>
 		<li><a href="convertip">convertip</a></li>
+		<li><a href="https://apimon.de/ip" target="_blank">whatismyip</a> (external link)</li>
 	</ul>
-	<p>Copyright (c) 2017-2018, <a href="https://hellsh.com/" target="_blank">Hellsh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
+	<p>Copyright (c) 2017-2019, <a href="https://hell.sh/" target="_blank">Hell.sh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 </body>
 </html>
