--- a/unicodify.html
+++ b/unicodify.html
@@ -9,7 +9,7 @@
 	<textarea id="input" style="min-width:100%;max-width:100%;height:100px" autofocus>Converts clear text like this into Unicode text like that.</textarea>
 	<ul id="output" style="list-style-type:none;padding:0"></ul>
 	<p>Looking for a way to undo this unholy transaction? <a href="/ununicodify">ununicodify</a></p>
-	<p>Copyright (c) 2017-2018, <a href="https://hellsh.com/" target="_blank">Hellsh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
+	<p>Copyright (c) 2017-2019, <a href="https://hell.sh/" target="_blank">Hell.sh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 	<script src="unicode_alphabets.js"></script>
 	<script>
 		document.getElementById("input").oninput=function()
