--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li><a href="unicodify">unicodify</a></li>
 		<li><a href="ununicodify">ununicodify</a></li>
 		<li><a href="convertip">convertip</a></li>
-		<li><a href="https://apimon.de/ip" target="_blank">whatismyip</a> (external link)</li>
+		<li><a href="https://apimon.de/my-ip-addresses" target="_blank">whatismyip</a> (external link)</li>
 	</ul>
 	<p>Copyright (c) 2017-2019, <a href="https://hell.sh/" target="_blank">Hell.sh</a> &middot; <a href="https://hell.sh/privacy" target="_blank">Privacy Policy</a></p>
 </body>
